# project-sentinel

./: .env.example  .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  env.py  models.py
tests/: test_sentinel.py
